--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,16 @@
         },
         {
             "type": "java",
+            "name": "Debug (Launch)",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "stopOnEntry": false,
+            "mainClass": "",
+            "args": ""
+        },
+        {
+            "type": "java",
             "name": "Debug (Launch)-BlockingQueueMain<myThreadDemo>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
