--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -117,7 +117,7 @@
             "name": "Debug (Attach)",
             "request": "attach",
             "hostName": "localhost",
-            "port": "<debug port of remote debuggee>"
+            "port": 8080
         }
     ]
 }
