--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>disruptor</artifactId>
             <version>3.3.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.taobao.tair</groupId>
+            <artifactId>tair-client</artifactId>
+            <version>2.3.5</version>
+        </dependency>
     </dependencies>
 
     <build>
